fix: Remove SVG 1.1 warnings

--- a/docs/architecture/architecture.mdx
+++ b/docs/architecture/architecture.mdx
@@ -6,4 +6,6 @@ sidebar_position: 2
 
 Describe the architecture.  You can add additional pages and diagrams in here and the nav on the left will be a tree.
 
-![Architecture Diagram](./architecture.drawio.svg)
+import ArchitectureDiagram from './architecture.drawio.svg';
+
+<ArchitectureDiagram className="drawio" />
